mock-data/large-cluster/mock-networking/deployment-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: networking
  labels:
    app.kubernetes.io/name: webapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
    spec:
      containers:
        - name: nginx
          image: nginx:1.21
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          resources:
            requests:
              memory: 10M
              cpu: 10m
            limits:
              memory: 10M
              cpu: 10m
