mock-data/large-cluster/mock-networking/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: networking
  labels:
    app.kubernetes.io/name: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  - port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: webapp
