mock-data/large-cluster/mock-networking/service-wrong-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-app
  namespace: networking
  labels:
    app.kubernetes.io/name: wrong-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: wrong-app
