mock-data/large-cluster/mock-networking/ingress-wrong-app-port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrong-app-port
  namespace: networking
  labels:
    app.kubernetes.io/name: wrong-app-port
spec:
  # ingressClassName: standard
  rules:
  - host: sample.kubevious.io
    http:
      paths:
      - path: /wrong-app-port
        pathType: Prefix
        backend:
          service:
            name: wrong-port
            port:
              number: 80
